app/_scss/mobile.scss
@media (max-width: 768px) {
  .header .logo h1 a span {
    width: 100%;
    background-size: 100%;
  }

  .header .logo h1 {
    margin: 0
  }

  .header .list .list-unstyled li {
    float: left;
  }

  .header .list .list-unstyled li:last-child {
    padding-left: 10px;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  .ebook-sales .package div.heading img {
    margin-left: 0;
  }

  section.header div.container .list {
    float: left;
  }

  section.header div.container .list .list-unstyled {
    margin: 0;
    padding: 0;
    border-left: 0;
  }

  section.about {
    display: none;
  }

  body section.header div.container {
    border-top: none;
    padding-bottom: 1em;
    margin-bottom: 1em;
  }

  body section .landscape-image img {
    margin: 0 0 1em;
    width: 100%;
    height: auto;
  }

  .rhs {
    display: none;
  }
}

